--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "gridsome": "^0.7.0"
+    "gridsome": "^0.7.0",
+    "gridsome-source-rss": "^1.0.0"
   },
   "devDependencies": {
     "@gridsome/plugin-google-analytics": "^0.1.0",
