--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@gridsome/transformer-remark": "^0.5.0",
     "fuse.js": "^3.4.6",
     "gridsome-plugin-tailwindcss": "^2.2.36",
-    "node-sass": "^4.13.1",
+    "sass": "^1.32.0",
     "prism-themes": "^1.3.0",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^10.2.0",
     "tailwindcss": "^1.2.0",
     "vue-feather-icons": "^5.0.0"
   }
